ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - example.local
    secretName: ingress-tls
  rules:
  - host: example.local
    http:
      paths:
      - path: /(index.html)?
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /download
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /upload
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /register
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
